--- a/slider/static/nasa_project/css/style.css
+++ b/slider/static/nasa_project/css/style.css
@@ -19,7 +19,6 @@ body,
     margin-block: 0;
 }
 
-
 .navbar {
     background-color: #000;
 }
@@ -88,9 +87,8 @@ body,
     height: 420px;
     object-fit: unset;
     box-shadow: black 0 0 20px 0;
-    border-radius: 40px !important; /* Увеличенное закругление для основного слайдера */
+    border-radius: 40px !important;
 }
-
 
 .slider-nav img {
     width: 165px;
@@ -98,7 +96,6 @@ body,
     object-fit: initial;
     border-radius: 20px !important;
 }
-
 
 .img-fluid-slide {
     margin: 0 auto;
@@ -122,6 +119,36 @@ body,
     content: "";
 }
 
+/* Модальное окно */
+.modal-body {
+    padding: 0;
+}
+
+#modalImage {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+#prevImage, #nextImage {
+    font-size: 2rem;
+    opacity: 0.7;
+    background-color: rgba(0, 0, 0, 0.5);
+    border: none;
+    color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: opacity 0.3s;
+}
+
+#prevImage:hover, #nextImage:hover {
+    opacity: 1;
+}
 
 
 
