--- a/templates/index.html
+++ b/templates/index.html
@@ -41,13 +41,12 @@
 <!-- Основной контент -->
 <div class="container container-slide mt-5">
     <div class="row justify-content-center text-center">
-        <div class="col-lg-7">
-            <h1 class="display-4">Космическое агентство</h1>
+        <div class="col-lg-8">
+            <h1 class="display-4 fw-bold">Космическое агентство</h1>
             <p class="lead">Национальное управление по аэронавтике и исследованию космического пространства — ведомство, относящееся к федеральному правительству США и подчиняющееся непосредственно президенту США.</p>
         </div>
     </div>
     <div class="col d-lg-flex text-center">
-        <!-- Иконки и главное изображение в одной строке -->
         <div class="icons row row-cols-2 justify-content-center text-center my-5">
             <!-- Первая строка с иконками -->
             <div class="col mb-4 ">
@@ -69,7 +68,6 @@
                 <p>Золотая медаль по научным исследованиям</p>
             </div>
         </div>
-            <!-- Третья строка с иконками -->
         <!-- Главное изображение справа -->
         <div class="col-lg-6">
             <div class="main-image">
@@ -78,7 +76,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- Фотографии -->
 <section class="photo-section text-center">
@@ -102,9 +99,30 @@
         </div>
     </div>
 </section>
+<!-- Модальное окно -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-body position-relative">
+                <!-- Стрелки -->
+                <button type="button" class="btn btn-dark position-absolute start-0 top-50 translate-middle-y" id="prevImage">
+                    <span>&#10094;</span>
+                </button>
+                <img src="" id="modalImage" class="img-fluid" alt="Полноразмерное изображение">
+                <button type="button" class="btn btn-dark position-absolute end-0 top-50 translate-middle-y" id="nextImage">
+                    <span>&#10095;</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Скрипты -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+
     <script src="{% static 'nasa_project/js/scripts.js' %}"></script>
 </body>
 </html>
